Reactor 기반 코드 추가